Fix checkbox alignment

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -12982,3 +12982,8 @@ button.close {
   padding-top: 0;
   padding-bottom: 0;
 }
+
+.hear-aboutus .checkbox {
+  margin-top: 0;
+  margin-right: 5px;
+}
